Sun  Jan  2 2005	H. Wade Minter (minter@lunenburg.org)
     * Add password protection for Randy in KC.  You can now set a write
       access password in the Preferences that will cause any attempt to
       modify things (add/edit/delete songs and categories) to ask for that
       password before proceeding.

Sat  Jan  1 2005	H. Wade Minter (minter@lunenburg.org)
     * Make the mainbox a DropSite so that if you drop a file onto it,
       the add_song dialog comes up.  Should be handy for Windows users.
       Thanks to the.noonings on the PAR list for the code.

Mon  Nov 22 2004	H. Wade Minter (minter@lunenburg.org)
     * Fix the logfile routines so that a) logfiles actually work, and
       b) Windows users get logfiles all the time.
     * Clean up command line switches, add --help flag to show usage.
     * Start work on a --debug command line switch to dump tons of debugging
       information to STDOUT.

Wed  Nov 10 2004	H. Wade Minter (minter@lunenburg.org)
     * Deiconify/raise the mainwindow when doing fresh-install stuff, 
       otherwise the app will silently hang.
     * Released version 2.0.2

Sat  Oct  2  2004	H. Wade Minter (minter@lunenburg.org)
     * Nicer output from cpancheck.pl

Sat  Sep 25  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug that prevented the holding tank from launching playlists.
     * Released Version 2.0.1 with this bugfix.

Fri  Sep 24  2004	H. Wade Minter (minter@lunenburg.org)
     * Finished updating documentation.
     * Released Version 2.0!

Tue  Sep 21  2004	H. Wade Minter (minter@lunenburg.org)
     * Print a status message when we fade-stop.

Sun  Sep 19  2004	H. Wade Minter (minter@lunenburg.org)
     * Use shift() instead of ($scalar) = @_ when we only care about one
       argument.

Sat  Sep 18  2004	H. Wade Minter (minter@lunenburg.org)
     * Add a --config flag to point to an alternate mrvoicerc.
     * Wrap the database SQL import in a transaction for efficency.